--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
   sql:
     init:
       mode: always
+      schema-locations: classpath:schema.sql
 
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
@@ -27,6 +28,7 @@ logging:
   level:
     root: info
     org.springframework.boot.autoconfigure: debug
+    org.springframework.jdbc.datasource.init: debug
     com.example.vibeapp: debug
   file:
     name: ./logs/app.log
